added full structure, but nothing works